# smart-pdf-md

./: .gitignore  README.md  README.zh.md  pyproject.toml
samples/: README.md  run_demo.py  sample.md  zhuangzi-study.md
src/pdf2m/: __init__.py  cli.py  core.py
tests/: test_core.py
