[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf2m"
version = "0.1.0"
description = "Smart PDF/OCR multi-source router to Markdown: auto-pick the most accurate extraction path (PyMuPDF / MinerU / OCR md). 智能 PDF/OCR 多源路由器，自动选择最佳抽取路径。"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "ligj1706"},
]
keywords = ["pdf", "markdown", "ocr", "miner u", "pymupdf", "document-conversion", "fallback"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "pymupdf>=1.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
    "build>=1.0",
]

[project.scripts]
pdf2m = "pdf2m.cli:main"

[project.urls]
Homepage = "https://github.com/ligj1706/pdf2m"
Issues = "https://github.com/ligj1706/pdf2m/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]